# ffmpeg-VideoPlayer-Rust_Slint

./: .gitignore  Cargo.toml  README.md  main.rs  player.rs  scene.slint
api/rs/slint/: android.rs
player/: audio.rs  video.rs
